# ml-specialization

./: .gitignore  LICENSE  README.md
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
COOKIECUTTER/ml-specialization/: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
COOKIECUTTER/ml-specialization/notebooks/: teste_1.ipynb
ML_Practical_Guide/: chapter_1.ipynb  chapter_2.ipynb  chapter_3.ipynb
