[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "beginning"
version = "0.0.1"
description = "Repository responsible for storing drafts of scripts developed during the machine learning specialization at Stanford University and studies from the ML Reference Guide Book"
authors = [
  { name = "dev-alissonalves" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["beginning"]
force_sort_within_sections = true


